--- a/styles/global.css
+++ b/styles/global.css
@@ -1,47 +1,47 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #nav-header {
-    padding: 5px 148px;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 600;
-    gap: 2rem;
+  padding: 5px 148px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  gap: 2rem;
 }
 
 #nav-header a {
-    text-decoration: none;
-    color: #8B0000;
-    font-size: 24px;
+  text-decoration: none;
+  color: #8B0000;
+  font-size: 24px;
 }
 
 .logo-div img {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
 .nav-links {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .nav-links a {
-    transition: transform 0.5s;
+  transition: transform 0.5s;
 }
 
 .nav-links a:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .btn-header {
-    width: auto;
-    height: auto;
+  width: auto;
+  height: auto;
 }
 
 #cart-modal-container {
@@ -282,76 +282,76 @@ input[type="checkbox"] {
 
 
 #footer-block {
-    max-width: 100%;
-    height: 19em;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../assets/img/paper_fon.jpg);
-  }
-  
-  #footer-logo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: auto;
-  }
-  
-  #footer-logo img {
-    width: 12em;
-    margin-top: 15%;
-  }
-  
-  #footer-logo p {
-    font-size: 0.8em;
-    margin-top: 10%;
-    color: rgb(0, 0, 0);
-  }
-  
-  .footer-menu {
-    padding: 0 6% 0 6%;
-    margin-left: 10%;
-  }
-  
-  .footer-menu h2 {
-    color: #8B0000;
-    font-size: 1.3em;
-    font-weight: bolder;
-    padding-bottom: 1em;
-  }
-  
-  .footer-menu-list {
-    margin: 0;
-    display: block;
-    color: #000000;
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-menu-list li {
-    padding-bottom: 0.5em;
-    font-weight: lighter;
-    transition: transform 0.5s; 
-  }
-  
-  .footer-menu-list li:hover {
-    transform: scale(1.2);
-  }
-  
-  .footer-menu-list a {
-    text-decoration: none;
-    color: #000000;
-  }
-  
-  .footer-menu-list a:hover {
-    color: #8B0000;
-  }
-  
-  .footer-menu-list svg {
-    width: 20px;
-    height: 20px;
-  }
+  max-width: 100%;
+  height: 19em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../assets/img/paper_fon.jpg);
+}
+
+#footer-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+}
+
+#footer-logo img {
+  width: 12em;
+  margin-top: 15%;
+}
+
+#footer-logo p {
+  font-size: 0.8em;
+  margin-top: 10%;
+  color: rgb(0, 0, 0);
+}
+
+.footer-menu {
+  padding: 0 6% 0 6%;
+  margin-left: 10%;
+}
+
+.footer-menu h2 {
+  color: #8B0000;
+  font-size: 1.3em;
+  font-weight: bolder;
+  padding-bottom: 1em;
+}
+
+.footer-menu-list {
+  margin: 0;
+  display: block;
+  color: #000000;
+  list-style: none;
+  padding: 0;
+}
+
+.footer-menu-list li {
+  padding-bottom: 0.5em;
+  font-weight: lighter;
+  transition: transform 0.5s; 
+}
+
+.footer-menu-list li:hover {
+  transform: scale(1.2);
+}
+
+.footer-menu-list a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.footer-menu-list a:hover {
+  color: #8B0000;
+}
+
+.footer-menu-list svg {
+  width: 20px;
+  height: 20px;
+}
 
 @media all and (min-width: 768px) and (max-width: 1180px) {
 
@@ -363,91 +363,22 @@ input[type="checkbox"] {
 
   @media all and (max-width: 980px)  {
 
-  #header {
-      padding-left: 2%;
-      padding-right: 2%;
-  }
+  #header {padding-left: 2%;padding-right: 2%;}
 
-  .burger-checkbox {
-    position: absolute;
-    visibility: hidden;
-  }
-  .burger {
-    position: relative;
-    z-index: 1;
-    cursor: pointer;
-    display: block;
-    position: relative;
-    border: none;
-    background: transparent;
-    width: 30px;
-    height: 26px;
-  }
+  .burger-checkbox {position: absolute; visibility: hidden;}
+  .burger {position: relative; z-index: 1; cursor: pointer; display: block; position: relative; border: none; background: transparent; width: 30px; height: 26px;}
   .burger::before,
-  .burger::after {
-    content: '';
-    left: 0;
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 10px;
-    background: #000;
-  }
-  .burger::before {
-    top: 0;
-    box-shadow: 0 11px 0 #000;
-    transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
-  }
-  .burger::after {
-    bottom: 0;
-    transition: bottom .3s .15s, transform .3s;
-  }
-  .burger-checkbox:checked + .burger::before {
-    top: 11px;
-    transform: rotate(45deg);
-    box-shadow: 0 6px 0 rgba(0,0,0,0);
-    transition: box-shadow .15s, top .3s, transform .3s .15s;
-  }
-  .burger-checkbox:checked + .burger::after {
-    bottom: 11px;
-    transform: rotate(-45deg);
-    transition: bottom .3s, transform .3s .10s;
-  }
+  .burger::after { content: ''; left: 0; position: absolute; display: block; width: 100%; height: 4px; border-radius: 10px; background: #000;}
+  .burger::before { top: 0; box-shadow: 0 11px 0 #000; transition: box-shadow .3s .15s, top .3s .15s, transform .3s;}
+  .burger::after { bottom: 0; transition: bottom .3s .15s, transform .3s;}
+  .burger-checkbox:checked + .burger::before { top: 11px; transform: rotate(45deg); box-shadow: 0 6px 0 rgba(0,0,0,0); transition: box-shadow .15s, top .3s, transform .3s .15s;}
+  .burger-checkbox:checked + .burger::after { bottom: 11px; transform: rotate(-45deg); transition: bottom .3s, transform .3s .10s;}
 
-  .nav-links {
-    top: 0;
-    left: 0;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    gap: 13px;
-    padding: 42px 0;
-    margin: 0;
-    background: #fff;
-    list-style-type: none;
-    transform: translateX(-100%);
-    transition: .1s;
-    width: 50%;
-    height: 100%;
-  }
+  .nav-links { top: 0; left: 0; position: fixed; display: flex; flex-direction: column; gap: 13px; padding: 42px 0; margin: 0; background: #fff; list-style-type: none; transform: translateX(-100%); transition: .1s; width: 50%; height: 100%;}
 
-  .page-link {
-    display: block;
-    padding: 8px;
-    color: white;
-    font-size: 18px;
-    text-align: center;
-    text-decoration: none;
-    height: 100%;
-  }
-  .page-link:hover {
-    background: rgba(255,255,255,.2)
-  }
-  .burger-checkbox:checked ~ .nav-links {
-    transform: translateX(0);
-  }
-
+  .page-link { display: block; padding: 8px; color: white; font-size: 18px; text-align: center; text-decoration: none; height: 100%;}
+  .page-link:hover {background: rgba(255,255,255,.2)}
+  .burger-checkbox:checked ~ .nav-links {transform: translateX(0);}
 }
 
   @media all and (min-width: 180px) and (max-width: 768px) {
