--- a/styles/style.css
+++ b/styles/style.css
@@ -249,7 +249,7 @@ a.button:hover {
 }
 
 .partners-title {
-  font-size: 3em;
+  font-size: 16px;
   margin-bottom: 0.5em;
   text-align: center;
   text-shadow: 2px 2px 3px gray;
