--- a/styles/global.css
+++ b/styles/global.css
@@ -374,7 +374,7 @@ input[type="checkbox"] {
   .burger-checkbox:checked + .burger::before { top: 11px; transform: rotate(45deg); box-shadow: 0 6px 0 rgba(0,0,0,0); transition: box-shadow .15s, top .3s, transform .3s .15s;}
   .burger-checkbox:checked + .burger::after { bottom: 11px; transform: rotate(-45deg); transition: bottom .3s, transform .3s .10s;}
 
-  .nav-links { top: 0; left: 0; position: fixed; display: flex; flex-direction: column; gap: 13px; padding: 42px 0; margin: 0; background: #fff; list-style-type: none; transform: translateX(-100%); transition: .1s; width: 50%; height: 100%;}
+  .nav-links { top: 0; left: 0; z-index: 3; position: fixed; display: flex; flex-direction: column; gap: 13px; padding: 42px 0; margin: 0; background: #fff; list-style-type: none; transform: translateX(-100%); transition: .1s; width: 50%; height: 100%;}
 
   .page-link { display: block; padding: 8px; color: white; font-size: 18px; text-align: center; text-decoration: none; height: 100%;}
   .page-link:hover {background: rgba(255,255,255,.2)}
